# potpie

./: .env.template  .gitignore  .gitmodules  .potpieignore  DEEPWIKI_INTEGRATION.md  README.md  docker-compose.yaml  potpie_cli.py  pyproject.toml  qna_eval_demo.sh  start.sh  test_llm.py
.deepwiki/: agent_background_execution.md  agent_execution_pipeline.md  agent_system_architecture.md  api_reference.md  architecture_overview.md  authentication_and_user_management.md  background_processing.md  bash_command_tool_and_sandboxing.md  celery_task_system.md  change_detection_tool.md  code_analysis_tools.md  code_provider_system.md  code_query_tools.md  configuration_and_infrastructure.md  configuration_provider.md  conversation_service_and_lifecycle.md  conversation_system.md  core_intelligence_system.md  custom_agents.md  data_layer.md  demo_project_duplication.md  dependency_management.md  development_and_deployment.md  development_mode.md  development_mode_authentication.md  environment_configuration.md  external_service_integrations.md  firebase_firestore.md  getting_started.md  github_integration.md  github_linking_requirement.md  inference_and_docstring_generation.md  integration_tools.md  knowledge_graph_construction.md  (+28 more)
.kiro/skills/lightrag-apps/: QUICKSTART.md  README.md  SKILL.md  pyproject.toml
.kiro/skills/lightrag-apps/lightrag_apps/: __init__.py  spec_graph.py
.kiro/skills/potpie-evaluator/: SKILL.md  pyproject.toml
.kiro/skills/potpie-evaluator/scripts/: evaluate_qna.py  score.md
.kiro/skills/potpie-evaluator/scripts/deepeval-scoring/evaluators/: __init__.py  qna_evaluator.py
.kiro/skills/repowiki/: SKILL.md  pyproject.toml
.kiro/skills/repowiki/repowiki/: __init__.py  analysis.py  cli.py  discovery.py  dispatch.py  markdown_gen.py  models.py  output.py
.kiro/skills/repowiki/scripts/: generate_wiki.py  graph.py  models.py
.kiro/skills/repowiki/tests/: test_code_analysis.py  test_dispatch.py  test_markdown_generation.py  test_output_and_index.py  test_source_discovery.py
.kiro/skills/repowiki/wiki/: _Sidebar.md
.kiro/skills/repowiki/wiki-llm/: _Sidebar.md
.kiro/skills/repowiki/wiki-llm/repowiki/: __init__.md  analysis.md  cli.md  discovery.md  dispatch.md  markdown_gen.md  models.md  output.md
.kiro/skills/repowiki/wiki-llm/tests/: test_code_analysis.md  test_dispatch.md  test_markdown_generation.md  test_output_and_index.md  test_source_discovery.md
.kiro/skills/repowiki/wiki/repowiki/: __init__.md  analysis.md  cli.md  discovery.md  dispatch.md  markdown_gen.md  models.md  output.md
.kiro/skills/repowiki/wiki/tests/: __init__.md  test_code_analysis.md  test_dispatch.md  test_markdown_generation.md  test_output_and_index.md  test_source_discovery.md
.kiro/skills/wiki-evaluator/: SKILL.md  pyproject.toml
.kiro/skills/wiki-evaluator/scripts/: evaluate_wiki.py
.kiro/skills/wiki-evaluator/scripts/wiki-evaluator-modules/: __init__.py  deepwiki_docs_parser.py  graph_rubric_generator.py  reference_rubrics_generator.py  wiki_evaluator.py
(+335 files in other folders)
