[project]
name = "potpie-evaluator"
version = "1.0.0"
description = "Evaluates potpie QnA agent responses using pydantic_evals LLMJudge metrics"
readme = "SKILL.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    # All other deps (pydantic_evals, litellm, CopilotModel, PotpieRuntime)
    # come from the potpie venv. Run using:
    #   .venv/bin/python .kiro/skills/potpie-evaluator/scripts/evaluate_qna.py ...
]

[project.scripts]
potpie-evaluator = "scripts.evaluate_qna:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.hatch.build]
include = [
    "scripts/*.py",
    "scripts/deepeval-scoring/**/*.py",
]

