[project]
name = "wiki-evaluator"
version = "1.0.0"
description = "Evaluates wiki/documentation quality using potpie code-graph tools for ground-truth rubric generation"
readme = "SKILL.md"
requires-python = ">=3.10"
dependencies = [
    # All deps (pydantic_evals, litellm, CopilotModel, PotpieRuntime, graph tools)
    # come from the potpie venv. Run using:
    #   .venv/bin/python .kiro/skills/wiki-evaluator/scripts/evaluate_wiki.py ...
]

[project.scripts]
wiki-evaluator = "scripts.evaluate_wiki:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.hatch.build]
include = [
    "scripts/*.py",
    "scripts/wiki-evaluator-modules/**/*.py",
]
